// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`values helpers fromMap() should return the slonik construct for a map object 1`] = `
Object {
  "glue": Object {
    "sql": ", ",
    "type": "SLONIK_TOKEN_SQL",
    "values": Array [],
  },
  "members": Array [
    "first value",
    222,
  ],
  "type": "SLONIK_TOKEN_LIST",
}
`;

exports[`values helpers fromMap() should return the slonik construct for a map object with translation 1`] = `
Object {
  "glue": Object {
    "sql": ", ",
    "type": "SLONIK_TOKEN_SQL",
    "values": Array [],
  },
  "members": Array [
    "first value",
    Object {
      "type": "SLONIK_TOKEN_JSON",
      "value": Object {
        "isaJson": true,
      },
    },
  ],
  "type": "SLONIK_TOKEN_LIST",
}
`;

exports[`values helpers fromObject() should return the slonik construct for a set of object properties 1`] = `
Object {
  "glue": Object {
    "sql": ", ",
    "type": "SLONIK_TOKEN_SQL",
    "values": Array [],
  },
  "members": Array [
    "first value",
    222,
  ],
  "type": "SLONIK_TOKEN_LIST",
}
`;

exports[`values helpers fromObject() should return the slonik construct for a set of object properties with translation 1`] = `
Object {
  "glue": Object {
    "sql": ", ",
    "type": "SLONIK_TOKEN_SQL",
    "values": Array [],
  },
  "members": Array [
    "first value",
    Object {
      "type": "SLONIK_TOKEN_JSON",
      "value": Object {
        "isaJson": true,
      },
    },
  ],
  "type": "SLONIK_TOKEN_LIST",
}
`;

exports[`values helpers fromObject() should return the slonik construct for a set of object properties with translation that operates on the column name 1`] = `
Object {
  "glue": Object {
    "sql": ", ",
    "type": "SLONIK_TOKEN_SQL",
    "values": Array [],
  },
  "members": Array [
    "first value",
    Object {
      "type": "SLONIK_TOKEN_JSON",
      "value": Object {
        "isaJson": true,
      },
    },
  ],
  "type": "SLONIK_TOKEN_LIST",
}
`;
